--- a/ColorPicker.html
+++ b/ColorPicker.html
@@ -60,21 +60,27 @@
 
     const clearButton = document.getElementById(`clear`)
     red.addEventListener(`click`, function(e){
+        removeBGcolor()
         content.classList.add(`red`);
     });
     green.addEventListener(`click`, function(e){
+        removeBGcolor()
         content.classList.add(`green`);
     });
     blue.addEventListener(`click`, function(e){
+        removeBGcolor()
         content.classList.add(`blue`);
     });
     pink.addEventListener(`click`, function(e){
+        removetextcolor()
         content.classList.add(`pink`);
     });
     teal.addEventListener(`click`, function(e){
+        removetextcolor()
         content.classList.add(`teal`);
     });
     purple.addEventListener(`click`, function(e){
+        removetextcolor()
         content.classList.add(`purple`);
     });
 
