--- a/changecontent.html
+++ b/changecontent.html
@@ -1,26 +1,37 @@
-div class="container">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <title>Change Contents of an element notes</title>
+</head>
+<body>
+<div class="container">
 <div class="content">
-    <h1>Change Content Notes</h1>
+    <h1>hello teachers</h1>
     <div class="row">
         <div>
             <label for="First Name">First Name</label>
-            <input type="text" id="first" name="First_Name" placeholder="Jane">
+            <input type="text" id="first name" name="First Name" placeholder="Ms">
         </div>
         <div>
             <label for="Last Name">Last name</label>
-            <input type="text" id="last" name="Last_Name" placeholder="Doe">
+            <input type="text" id="last name" name="Last Name" placeholder="Doe">
         </div>
-        <button name="clear">Clear</button>
+        <button name="hellobutton">hello!</button>
         <p class="hidden"></p>
     </div>
 </div>
 </div>
 </div>
+
+
 <script>
-    const FirstName = document.getElementById(`first`)
-    const LastName = document.getElementById(`last`)
-    const Full = document.getElementById(`p`)
-    const clearButton = document.querySelector(`[name="clear"}`);
+    const FirstName = document.getElementById(`first`);
+    const LastName = document.getElementById(`last`);
+    const Full = document.getElementById(`p`);
+    const helloButton = document.getElementById('hello!');
 
 
     FirstName.addEventListener(`change`, function(e){
@@ -35,9 +46,11 @@ div class="container">
         full.textContent =FullName
     })
 
-    clearButton.addEventListener(`click`, function(e)){
-        FirstName.value = ""
-        LastName.value = ""
-        full.textContent = ""
-    }
+    helloButton.addEventListener(`click`, function(e)
+    {
+
+
+    })
 </script>
+</body>
+</html>
