--- a/homeworksolver.html
+++ b/homeworksolver.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <div class="content">
-        <h3>Is it a triangle or not???</h3>
+        <h3>Is it a triangle or a square</h3>
         <div class="row">
             <div>
                 <label for="a">A</label>
